# container-test-01

./: .gitattributes  .gitignore  README.md  main.py  notebook-01.ipynb  pyproject.toml  restaurant-name-clusters.ipynb  restaurant_cuisines.ipynb
.devcontainer/: devcontainer.json
