[project]
name = "container-test-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "geopandas>=1.1.2",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.8",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pypalettes>=0.2.1",
]
